--- a/index.html
+++ b/index.html
@@ -1,49 +1,96 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="nl">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mijn eerste Bootstrap pagina</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>TestPage</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
 </head>
 
 <body>
-
-    <div class="container mt-5">
-        <h1 class="text-primary">Mijn eerste Bootstrap pagina</h1>
-        <p class="text-muted">Dit is mijn allereerste Bootstrap project.</p>
-
-        <button class="btn btn-success">Klik mij</button>
-
-        <div class="row mt-4">
-            <div class="col-6 bg-light p-3">
-                <h2>Voornaam</h2>
-                <ul>
-                    <li>Ahmed</li>
-                    <li>Sara</li>
-                    <li>Jasper</li>
-                </ul>
-            </div>
-
-            <div class="col-6 bg-secondary text-white p-3">
-                <h2>Achternaam</h2>
-                <ul>
-                    <li>Ali</li>
-                    <li>De Vries</li>
-                    <li>Smits</li>
-                </ul>
-            </div>
+    <div class="container py-4">
+        <div class="d-flex align-items-center gap-2 mb-3">
+            <h3 class="mb-0">Form</h3>
+            <button class="btn btn-link p-0 text-decoration-none" title="Bewerken">
+                <i class="bi bi-pencil-square"></i>
+            </button>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card app-card rounded-3 shadow-sm">
             <div class="card-body">
-                <h5 class="card-title">Eerste card</h5>
-                <p class="card-text">Dit is mijn eerste card die ik met bootstrap heb gemaakt. </p>
+                <div class="row g-0">   
+                    <div class="col-12 col-lg-4 pe-lg-4 mb-3 mb-lg-0">
+                        <div class="sidebar border rounded-3 overflow-hidden">
+                            <div class="sidebar-title px-3 py-2">Fields</div>
+                            <div class="list-group list-group-flush">
+                                <a class="list-group-item list-group-item-action" href="#">Send to</a>
+                                <a class="list-group-item list-group-item-action" href="#">Confirmation</a>
+                                <a class="list-group-item list-group-item-action" href="#">Google analytics</a>
+                                <a class="list-group-item list-group-item-action" href="#">Zapier</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-lg-8 ps-lg-4">
+                        <div class="d-flex align-items-center justify-content-between mb-3">
+                            <button class="btn btn-outline-secondary">
+                                Add field
+                            </button>
+
+                        </div>
+
+                        <!-- Field row 1 -->
+                        <div class="d-flex align-items-center gap-2 mb-3">
+                            <div class="input-group">
+                                <span class="field-icon">
+                                    <i class="bi bi-keyboard"></i>
+                                </span>
+                                <input class="form-control field-input py-2" value="" placeholder="Naam" />
+                            </div>
+                            <button class="btn btn-outline-secondary gear-btn" title="Settings">
+                                <i class="bi bi-gear"></i>
+                            </button>
+                        </div>
+
+                        <!-- Field row 2 -->
+                        <div class="d-flex align-items-center gap-2 mb-3">
+                            <div class="input-group">
+                                <span class="field-icon">
+                                    <i class="bi bi-envelope"></i>
+                                </span>
+                                <input class="form-control field-input py-2" value="" placeholder="E-maul" />
+                            </div>
+                            <button class="btn btn-outline-secondary gear-btn" title="Settings">
+                                <i class="bi bi-gear"></i>
+                            </button>
+                        </div>
+
+                        <!-- Field row 3 -->
+                        <div class="d-flex align-items-center gap-2 mb-4">
+                            <div class="input-group">
+                                <span class="field-icon">
+                                    <i class="bi bi-card-text"></i>
+                                </span>
+                                <input class="form-control field-input py-2" value="" placeholder="Typ je bericht " />
+                            </div>
+                            <button class="btn btn-outline-secondary gear-btn" title="Settings">
+                                <i class="bi bi-gear"></i>
+                            </button>
+                        </div>
+
+                        <hr class="my-4">
+                    </div>
+                </div>
             </div>
         </div>
+    </div>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
